--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,43 @@
 {
     "cSpell.words": [
-        "hxnull", "hxmin", "hxmax", "hxabs", "hxclamp", "hxout",
-        "reimplementation", "unconstructed"
+        "DTEST",
+        "emcc",
+        "Emscripten",
+        "emsdk",
+        "fsanitize",
+        "gcda",
+        "gcno",
+        "gcovr",
+        "googletest",
+        "gtest",
+        "hxabs",
+        "hxclamp",
+        "hxmax",
+        "hxmin",
+        "hxnull",
+        "hxout",
+        "hxtest",
+        "Iinclude",
+        "lpthread",
+        "lstdc",
+        "lubsan",
+        "multilib",
+        "multiset",
+        "pthread",
+        "RAII",
+        "Reenqueuing",
+        "reimplementation",
+        "rtti",
+        "unconstructed",
+        "Wcast",
+        "Wdisabled",
+        "Wendif",
+        "Werror",
+        "Wextra",
+        "Wshadow",
+        "Wstrict",
+        "Wundef",
+        "Wunused",
+        "Wwrite"
     ]
 }
