--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "reimplementation",
         "rtti",
         "unconstructed",
+        "WASD",
         "Wcast",
         "Wdisabled",
         "Wendif",
