--- a/VisualStudio/Hatchling.vcxproj.filters
+++ b/VisualStudio/Hatchling.vcxproj.filters
@@ -2,6 +2,7 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <None Include="..\.gitattributes" />
++   <None Include="..\checkubuntu.sh" />
     <None Include="..\clean.sh" />
     <None Include="..\debugbuild.sh" />
     <None Include="..\README.md" />
