--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Copyright 2017-2025 Adrian Johnston
 #
 # A CMake build that uses Google Test instead of the hxTest.h reimplementation.
-# This file targets Google Test and is not intended for building a library.
+# This file is not intended for building a library.
 
 cmake_minimum_required(VERSION 3.10)
 project(Hatchling)
