--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "Wendif",
         "Werror",
         "Wextra",
+        "Wfatal",
         "Wshadow",
         "Wstrict",
         "Wundef",
