optimize the console, check for fp exceptions and rip out the scratchpad. also rename some stuff.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,8 +43,5 @@
         "Wwrite",
         "Xclang"
     ],
-    "editor.cursorBlinking": "solid",
-    "files.associations": {
-        "hatchling.h": "c"
-    }
-}
+    "editor.cursorBlinking": "solid"
+ }
