no more allocations before main

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "cntvct",
         "DTEST",
         "emcc",
         "Emscripten",
@@ -12,6 +13,7 @@
         "gtest",
         "hxabs",
         "hxclamp",
+        "hxcycles",
         "hxmax",
         "hxmin",
         "hxnull",
@@ -21,12 +23,16 @@
         "lpthread",
         "lstdc",
         "lubsan",
+        "mftb",
         "multilib",
         "multiset",
         "pthread",
         "RAII",
+        "rdcycle",
+        "rdtsc",
         "Reenqueuing",
         "reimplementation",
+        "riscv",
         "rtti",
         "unconstructed",
         "WASD",
