formatting of comments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "emcc",
         "Emscripten",
         "emsdk",
+        "failable",
         "fsanitize",
         "gcda",
         "gcno",
@@ -32,6 +33,7 @@
         "rdtsc",
         "Reenqueuing",
         "reimplementation",
+        "RIAA",
         "riscv",
         "rtti",
         "unconstructed",
