add linux command line interface to hx console.  the tests are run as a command from the command line from script.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/hxtest",
-            "args": [],
+            "args": ["runtests"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
