--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,7 @@
         "RIAA",
         "riscv",
         "rtti",
+        "runtests",
         "unconstructed",
         "WASD",
         "Wcast",
