--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "Emscripten",
         "emsdk",
         "failable",
+        "feenableexcept",
         "fsanitize",
         "gcda",
         "gcno",
@@ -14,6 +15,7 @@
         "gtest",
         "hxabs",
         "hxclamp",
+        "hxconsolehex",
         "hxcycles",
         "hxmax",
         "hxmin",
@@ -25,6 +27,7 @@
         "lstdc",
         "lubsan",
         "mftb",
+        "msvc",
         "multilib",
         "multiset",
         "pthread",
@@ -37,7 +40,9 @@
         "riscv",
         "rtti",
         "runtests",
+        "stdint",
         "unconstructed",
+        "valgrind",
         "WASD",
         "Wcast",
         "Wdisabled",
