fix up wasm and

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "emcc",
         "Emscripten",
         "emsdk",
+        "execstdin",
         "failable",
         "feenableexcept",
         "fsanitize",
@@ -30,6 +31,7 @@
         "msvc",
         "multilib",
         "multiset",
+        "printhashes",
         "pthread",
         "RAII",
         "rdcycle",
