add stripped build to diagnose code size

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,18 @@
 {
     "cSpell.words": [
         "cntvct",
+        "demangle",
+        "Demangled",
         "DTEST",
         "emcc",
         "Emscripten",
         "emsdk",
         "execstdin",
         "failable",
+        "fdata",
         "feenableexcept",
+        "ffast",
+        "ffunction",
         "fsanitize",
         "gcda",
         "gcno",
@@ -37,6 +42,7 @@
         "RAII",
         "rdcycle",
         "rdtsc",
+        "readelf",
         "Reenqueuing",
         "reimplementation",
         "riscv",
