launch chrome as needed. optimize wasm.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "feenableexcept",
         "ffast",
         "ffunction",
+        "fpic",
         "fsanitize",
         "gcda",
         "gcno",
