switch to a bin directory. use dash not bash. enable posix command line compliance.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/hxtest",
-            "args": ["runtests"],
+            "program": "${workspaceFolder}/bin/hxtest",
+            "args": ["help", "printhashes", "runtests"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
