--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "asan",
         "checkhash",
         "cntvct",
+        "debugbuild",
         "demangle",
         "Demangled",
         "DTEST",
@@ -28,12 +29,13 @@
         "hxconsolehex",
         "hxconsolenumber",
         "hxcycles",
+        "hxinit",
         "hxmax",
         "hxmin",
         "hxnull",
         "hxswap",
         "hxtest",
-        "Iinclude",
+        "I../include",
         "lpthread",
         "lstdc",
         "lubsan",
@@ -55,6 +57,11 @@
         "rtti",
         "runtests",
         "stdint",
+        "testcmake",
+        "testcoverage",
+        "testerrorhandling",
+        "teststrip",
+        "testwasm",
         "tsan",
         "ubsan",
         "unconstructed",
