fix up test.sh. add timing to full build.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "rtti",
         "runtests",
         "stdint",
+        "testall",
         "testcmake",
         "testcoverage",
         "testerrorhandling",
