make the random call enforce undefined behavior.  simplify its operators. tweak scripts.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "execstdin",
         "failable",
         "fdata",
+        "fdiagnostics",
         "feenableexcept",
         "ffast",
         "ffunction",
