fix more naming. make thread dispatcher more standards compliant.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "multiset",
         "printhashes",
         "pthread",
+        "qwertyuiopasdfghjklzxcvbnm",
         "RAII",
         "rdcycle",
         "rdtsc",
