--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
         "feenableexcept",
         "ffast",
         "ffunction",
+        "filt",
         "fpic",
         "fsanitize",
         "gcda",
