python printing c++ functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "googletest",
         "gtest",
         "I../include",
+        "Iinclude",
         "lpthread",
         "lstdc",
         "lubsan",
