--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "asan",
         "checkasserts",
         "checkhash",
+        "cindex",
         "cntvct",
         "debugbuild",
         "demangle",
