--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,11 @@
         "checkhash",
         "cindex",
         "cntvct",
+        "constness",
         "debugbuild",
         "demangle",
         "Demangled",
+        "docstrings",
         "DTEST",
         "emcc",
         "Emscripten",
