move to nanobind and use a "detail" header directory and use hxdetail_:: for a namespace.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,7 @@
         "msvc",
         "multilib",
         "multiset",
+        "nanobind",
         "printhashes",
         "pthread",
         "pybind",
