--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,7 @@
         "printhashes",
         "pthread",
         "pybind",
+        "pyproject",
         "PYTHONPATH",
         "qwertyuiopasdfghjklzxcvbnm",
         "RAII",
@@ -64,6 +65,7 @@
         "rodata",
         "rtti",
         "runtests",
+        "setuptools",
         "skipasserts",
         "stdint",
         "testall",
