work in progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "testwasm",
         "tsan",
         "ubsan",
+        "ulonglong",
         "unconstructed",
         "valgrind",
         "WASD",
