simplify overload tables

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,6 +49,7 @@
         "multilib",
         "multiset",
         "nanobind",
+        "pointee",
         "printhashes",
         "pthread",
         "pybind",
