working with 4 different type systems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,7 @@
         "lpython",
         "lstdc",
         "lubsan",
+        "LVALUEREFERENCE",
         "mftb",
         "MMIX",
         "msvc",
@@ -66,6 +67,8 @@
         "rodata",
         "rtti",
         "runtests",
+        "RVALUEREFERENCE",
+        "SCHAR",
         "setuptools",
         "skipasserts",
         "stdint",
