--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,7 @@
         "printhashes",
         "pthread",
         "pybind",
+        "pycache",
         "pyproject",
         "PYTHONPATH",
         "qwertyuiopasdfghjklzxcvbnm",
@@ -84,6 +85,7 @@
         "ulonglong",
         "unconstructed",
         "valgrind",
+        "venv",
         "WASD",
         "Wcast",
         "Wdisabled",
