--- a/entanglement_template/pyproject.toml
+++ b/entanglement_template/pyproject.toml
@@ -5,8 +5,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "example-package"
-version = "0.1.0"
+name = "entanglement_test"
+version = "0.0.1"
 authors = [
   { name="Your Name", email="your.email@example.com" },
 ]
@@ -14,7 +14,9 @@ description = "Description of the package."
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
-#    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3"
+  'Intended Audience :: Developers',
+  'Programming Language :: Python :: 3',
+  'Programming Language :: C++',
+  'Operating System :: POSIX :: Linux',
+  'Topic :: Software Development :: Libraries :: Python Modules',
 ]
