--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "checkasserts",
         "checkhash",
         "cindex",
+        "clib",
         "cntvct",
         "constness",
         "debugbuild",
@@ -39,6 +40,7 @@
         "I../include",
         "Iinclude",
         "LDFLAGS",
+        "libentanglement",
         "lpthread",
         "lpython",
         "lstdc",
