--- a/entanglement_py_template/pyproject.toml
+++ b/entanglement_py_template/pyproject.toml
@@ -4,6 +4,9 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.packages.find]
+exclude = ["entanglement"]
+
 [project]
 name = "entanglement_py_template"
 version = "0.0.1"
